# equity-scanner

./: Cargo.toml  Example quote summary.json  README.md  config
examples/: aapl.rs
src/: client.rs  equity.rs  lib.rs  main.rs
src/cli/: config.rs  discord.rs  looper.rs  main.rs  nasdaq.rs
src/utils/: formatter.rs  indicators.rs  mod.rs  structs.rs  time.rs  yahoo.rs
