[package]
name = "equity-scanner"
version = "0.1.1"
edition = "2021"
description = "A stock scanner for the equity market"
authors = ["Luca Lapenna"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/1mshy/equity-scanner"
keywords = ["stock", "scanner", "equity", "market"]
categories = ["finance", "tools"]


[dependencies]
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
rust_ti = "1.3.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }

[[example]]
name = "aapl"
path = "examples/aapl.rs"