[package]
name = "equity-scanner"
version = "0.1.1"
edition = "2021"
description = "A stock scanner for the equity market"
authors = ["Luca Lapenna"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/1mshy/equity-scanner"
keywords = ["stock", "scanner", "equity", "market"]
categories = ["finance"]


[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
webhook = "2.1.2"

[[example]]
name = "aapl"
path = "examples/aapl.rs"

[lib]
name = "equity_scanner"
path = "src/lib.rs"

[[bin]]
name = "equity_scanner"
path = "src/cli/main.rs"
