[package]
name = "equity-scanner"
version = "0.1.2"
edition = "2021"
description = "A stock scanner for the equity market"
authors = ["Luca Lapenna"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/1mshy/equity-scanner"
keywords = ["stock", "scanner", "equity", "market"]
categories = ["finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
incremental = true # Compile your binary in smaller steps.
codegen-units = 256 # Allows LLVM to perform better optimization.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
strip = false # Ensures debug symbols are kept.

[profile.release]
incremental = true # Compile your binary in smaller steps.
codegen-units = 256 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
webhook = "2.1.2"

[[example]]
name = "aapl"
path = "examples/aapl.rs"

[lib]
name = "equity_scanner"
path = "src/lib.rs"

[[bin]]
name = "equity_scanner"
path = "src/cli/main.rs"
